@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2013-02-04 (SVN):
+    * host_cmd.c (Host_Class_f): add a big FIXME note to the lame fifth
+      class check against h2mp-style progs. bounds-check cl_playerclass
+      before using its value as an index for the ClassNames array.
+
+2013-02-04 (SVN):
     * menu.c: remove dead code which referenced non-existing art. coding
       style tidy-up.
     * d_init.c, gl_screen.c, screen.c: coding style tidy-up.
